# CS2022301-State-Minimization

./: .gitignore  CMakeLists.txt  README.md
examples/set00/case1/: case1.kiss  input.kiss
examples/set00/case2/: input.kiss
include/: debug.hpp  dot.hpp  kiss.hpp  state.hpp  state_minimization.hpp  utilities.hpp
scripts/: test.sh
src/: B11030202.cpp  debug.cpp  dot.cpp  kiss.cpp  state_minimization.cpp
web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
web/src/: App.tsx  ChangelogModal.tsx  example_kiss.ts  style.css
web/src/assets/: state_minimization.js
web_bak/: index.html
web_bak/assets/: state_minimization.js  state_minimization.wasm
